--- a/SAIgpt/style.css
+++ b/SAIgpt/style.css
@@ -317,7 +317,7 @@ main .txtBox_ctn .txtBox{
     }
 
     p{
-        padding: 4px 18px 4px 6px;
+        padding: 4px 18px 4px 18px;
         margin-right: 3.5%;
     }
 
@@ -511,8 +511,8 @@ main .txtBox_ctn .txtBox{
 .comentBx{
     position: relative;
     margin-bottom: 5px;
-    width: 40%;
-    margin-left: 55%;
+    width: 70%;
+    margin-left: 20%;
     padding: 1.5%;
     color: #5e11a7;
     border-radius: 20px;
@@ -554,7 +554,7 @@ main .txtBox_ctn .txtBox{
 }
 
 .comentBx::after{
-    content: "Comentarios";
+    content: "Comentarios y Asesoramiento";
     font-size: 100%;
     position: absolute;
     bottom: 15%;
