--- a/medicinePag/style.css
+++ b/medicinePag/style.css
@@ -115,125 +115,107 @@ header{
 
 
 
+/************************************************/
 
-
-
-
-
-
-/* contact */
-
-
-.contact-cnt{
+.mainMedic{
     margin-top: 5.5%;
-}
-
-.contact .txt_cntct{
-    background-color: #2c61a7;
-    height: 60vh;
     text-align: center;
 }
 
-.contact-cnt .contact h2{
-    font-size: 300%;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin-top: 6%;
+.mdcPrfl{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: center;
+    padding: 2%;
+
+    h1{
+        font-size: 300%;
+        margin-left: 8%;
+    }
+    svg{
+        right: 4%;
+        position: absolute;
+        width: 20%!important;
+        height: auto;
+    }
 }
 
-.contact-cnt .contact{
+.box-ctn-info1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-/*******************************************//*/*/
-
-.contact-cnt .contact .cntct_employs {
-    height: auto;
-}
-
-.contact-cnt .contact .cntct_employs ul{
-    border: 1px solid #000;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.contact-cnt .contact .cntct_employs ul li{
-    flex-basis: 449px;
-    margin-bottom: 7%;
-    list-style: none;
-    display: inline-block;
-    /*border: 1px dashed #eee;*/
-}
-
-.contact-cnt .contact .cntct_employs ul li div .img_ctn{
     text-align: center;
-    position: relative;
-    margin-top: -20%;
 }
 
-.contact-cnt .contact .cntct_employs ul li div img{
-    height: 120%;
-    width: 40%;
-    border-radius: 50%;
-    border: 1.5px solid #000;
-}
-
-
-.contact-cnt .contact .cntct_employs ul li div .redes_Detail {
-    text-align: center;
-    font-weight: 600;
-    letter-spacing: 0.5px;
-    padding: 0.6pc;
-    top: 6px;
-    margin-top: 20px;
-}
-
-.contact-cnt .contact .cntct_employs ul li div .ext_Detail{
-    margin-top: 5px;
-    height: 50%;
-    font-size: 95%;
-    padding: 10px;
-    text-align: justify;
-    letter-spacing: 0.5px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
-.cntct_employs ul li .cntc_infoEdt{
-    background-color: #509e87;
-    background-color: #6d9eb4;
-    border: 2px solid #000;
-    width: 70%;
-    position: relative;
-    top: -5pc;
-    margin: auto;
-    padding: 1.5%;
+.box-Info{
     border-radius: 20px;
+    margin: auto;
+    height: 50%;
+    width: 50%;
+    border: 1px solid #fff;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    background-color: #bdbdc283;
+    margin-bottom: 5%;
 
-    box-shadow:  -3px 3px 1px #223a59;
+    .boxFl{
+        --padng: 3.5%;
+        margin-top: 4%;
+        display: flex;
+        flex-direction: row;
+        padding: 0 var(--padng) var(--padng) var(--padng);
+    }
+}
+
+.boxFl img{
+    width: 25%;
+    border-radius: 20%;
+    border: 2px solid #000;
+    filter: grayscale(90%);
+    transition: 0.3s;
+}
+
+.boxFl img:hover,
+.boxFl img:active{
+    filter: grayscale(0%);
 }
 
 
+.txtFl{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    margin-left: 20px;
 
-/*//
+    .ttl-box{
+        font-weight: bolder;
+        text-decoration: underline;
+        color: #0e0633;
+    }
+}
 
+.box-Info span::before{
+    content: ' ';
+    position: absolute;
+    width: 90%;
+    left: 5%;
+    margin-top: 1%;
+    height: 2px;
+    border-top: 2px dashed black;
+}
 
+.arrowCtn{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    i{
+        cursor: pointer;
+    }
+}
 
 
 /*footer*/
@@ -323,116 +305,6 @@ header{
     color: #5a5656;
 }
 
-
-
-
-/*Phone capacity*/
-
-@media (max-width: 768px){
-    .btns{
-        display: block;
-    }
-
-    .nav_bar .first-list span{
-        display: none;
-    }
-
-    .nav-container{
-        height: 90px;
-    }
-
-    .nav-container .log-cnt_rw{
-        width: 30%;
-    }
-
-    .nav-container .log-cnt_rw img{
-        width: 200%;
-    }
-
-    .nav-container .log-cnt_rw .logo_ttl{
-        position: relative;
-        left: 100%;
-    }
-
-
-    .nav-container .nav_bar .btns{
-        height: 100%;
-        width: 100px;
-        font-size: 200%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .nav_bar .first-list{
-        background-color: #5292a5;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-evenly;
-        left: 100%;
-        margin: 0;
-        width: 100%;
-        position: fixed;
-        height: calc(100% - 90px);
-        top: 90px;
-
-        transition: left 0.3s;
-    }
-
-    .sticky .img-logo{
-        width: 75%;
-        margin-left: -5px;
-    }
-
-
-    /*/***/
-
-    .contact-cnt{
-        margin-top: 25%;
-    }
-
-    .contact-cnt .contact .cntct_employs .cntct_emp_lst {
-        grid-template-columns: auto;
-    }   
-
-    .contact-cnt .contact .cntct_employs ul li{
-        margin-bottom: 17%;
-        /*border: 1px dashed #eee;*/
-    }
-
-
-    /*/*//****//***/
-
-    .footer-ctn .footer-ctn_hdr .ftr_hdr_terms li{
-        margin-left: 13%;
-        margin-bottom: 10px;
-    }
-
-}
-
-@media (max-width: 767px){
-
-    .contact-cnt .contact .cntct_employs ul li {
-        font-size: 90%;
-    }
-
-    /*/**//********************************/
-
-    
-
-    /*/*//****//***/
-
-
-    .footer-ctn .footer-ctn_hdr .ftr_hdr_terms li{
-        margin-left: 3%;
-        padding: 10px;
-        padding-bottom: 10px;
-    }
-
-}
-
-
 .blockft{
     display: block;
     left: 0!important;
@@ -440,5 +312,4 @@ header{
 
 .bckScroll{
     background-color: rgb(65, 92, 167);
-
 }
