--- a/SAIgpt/style.css
+++ b/SAIgpt/style.css
@@ -147,6 +147,23 @@ header nav .txt_nav .profileTxt{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*main*/
 main{
     grid-area: main;
@@ -311,7 +328,7 @@ main .txtBox_ctn .txtBox{
 .gloveDecAi{
     margin: 3% 4% 4% 4%;
     justify-content: end;
-
+    
     img{
         background-color: #ffffff;
     }
@@ -332,6 +349,25 @@ main .txtBox_ctn .txtBox{
 .pnlAi::-webkit-scrollbar {
     display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*section*/
 
@@ -482,13 +518,15 @@ main .txtBox_ctn .txtBox{
     display: flex;
     justify-content: space-between;
     padding: 4%;
+    position: absolute;
+    width: 100%;
 }
 
 .historyBx .txt_Bx::before{
     content: ' ';
     position: absolute;
     margin-top: 15%;
-    width: 85%;
+    width: 90%;
     height: 1px;
     background-color: #55647e;
 }
@@ -497,7 +535,15 @@ main .txtBox_ctn .txtBox{
     content: ' ';
     position: absolute;
     width: 1%;
-    height: 7%;
+    height: 60%;
+    background-color: #6c8cc7af;
+}
+
+.historyBx .seen::after{
+    content: ' ';
+    position: absolute;
+    width: 1%;
+    height: 60%;
     background-color: #6c8cc7af;
 }
 
@@ -506,6 +552,13 @@ main .txtBox_ctn .txtBox{
     margin: 2%;
     border: 1px solid #9e9494;
     border-radius: 20px;
+    overflow: auto;
+    position: relative;
+    cursor: pointer;
+}
+
+.historyBx .txt_Bx-ctn::-webkit-scrollbar{
+    display: none;
 }
 
 .comentBx{
@@ -594,6 +647,163 @@ main .txtBox_ctn .txtBox{
 }
 
 
+.comentSect{
+    width: 100%;
+    height: 100%;
+    z-index: 10000000;
+    padding: 2%;
+    top: -100%;
+    color: #fff;
+    position: fixed;
+    background-image: radial-gradient(circle at 84% 82%, rgba(217, 217, 217,0.03) 0%, rgba(217, 217, 217,0.03) 21%,transparent 21%, transparent 100%),radial-gradient(circle at 75% 56%, rgba(3, 3, 3,0.03) 0%, rgba(3, 3, 3,0.03) 30%,transparent 30%, transparent 100%),radial-gradient(circle at 74% 53%, rgba(153, 153, 153,0.03) 0%, rgba(153, 153, 153,0.03) 95%,transparent 95%, transparent 100%),radial-gradient(circle at 86% 43%, rgba(209, 209, 209,0.03) 0%, rgba(209, 209, 209,0.03) 83%,transparent 83%, transparent 100%),radial-gradient(circle at 64% 88%, rgba(192, 192, 192,0.03) 0%, rgba(192, 192, 192,0.03) 2%,transparent 2%, transparent 100%),radial-gradient(circle at 73% 77%, rgba(205, 205, 205,0.03) 0%, rgba(205, 205, 205,0.03) 18%,transparent 18%, transparent 100%),radial-gradient(circle at 57% 51%, rgba(161, 161, 161,0.03) 0%, rgba(161, 161, 161,0.03) 64%,transparent 64%, transparent 100%),radial-gradient(circle at 40% 84%, rgba(115,115,115, 0.03) 0%, rgba(115,115,115, 0.03) 14%,transparent 14%, transparent 100%),linear-gradient(90deg, rgb(12,10,51),rgb(12,10,51));
+    
+    transition: top 0.9s;
+}
+
+
+.comt_ttl-bx{
+    display: flex;
+    justify-content: center;
+}
+
+.comentSect .comt_info-bx .txtBox {
+    border: 1px solid #545250;
+    width: 80%;
+    margin: auto;
+    margin-top: 5%;
+    padding: 1%;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    background-color: #e4e3e2;
+    position: relative;
+
+    textarea{
+        background-color: transparent;
+        color: #050505;
+        height: 50%;
+        font-size: 16px;
+        padding: 10px;
+        border: none;
+        resize: none;
+        overflow: hidden;
+    }
+    textarea:focus{
+        border: none;
+        outline: none;
+    }
+    textarea::placeholder{
+        color: #505050b7;
+        font-size: 105%;
+    }
+    button{
+        color: #5337b9;
+        position: absolute;
+        border: none;
+        background: transparent;
+        bottom: 5%;
+        right: 2%;
+        font-size: 20px;
+        cursor: pointer;
+    }
+    button:hover{
+        color: #937fee;
+        transition: 0.2s;
+        transform: rotateX(40deg);
+    }
+
+}
+
+.xdCmt::after{
+    content: ' ';
+    position: absolute;
+    width: 98%;
+    height: 2px;
+    margin-left: -0.3%;
+    bottom: 0;
+    background-color: #6547cf;
+}
+
+.tollsCnt{
+    padding: 3%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tooltip-container {
+    margin: 2%;
+    color: #ffffff;
+    --background: #00a36d;
+    position: relative;
+    background: var(--background);
+    cursor: pointer;
+    transition: all 0.2s;
+    font-size: 17px;
+    padding: 0.7em 1.8em;
+    border-radius: 50px;
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.tooltip {
+    background-color: #00a36d;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0.3em 0.6em;
+    width: 100%;
+    opacity: 0;
+    margin-top: -8%;
+    pointer-events: none;
+    transition: all 0.3s;
+    border-radius: 50px;
+}
+
+.tooltip-container:nth-child(2) .tooltip{
+    margin-top: -25%;
+    padding: 0.5em 1.2em;
+}
+
+.tooltip-container:nth-child(3) .tooltip{
+    margin-top: -15%;
+}
+
+.tooltip-container:nth-child(4) .tooltip{
+    margin-top: -15%;
+}
+
+.tollsCnt:has(.tooltip-container:hover)
+.tooltip-container:not(:hover){
+    filter: blur(1.5px) grayscale(80%);
+}
+
+.tooltip::before {
+    background-color: #00a36d;
+    position: absolute;
+    content: "";
+    height: 0.6em;
+    width: 0.6em;
+    bottom: -0.2em;
+    left: 50%;
+    transform: translate(-50%) rotate(45deg);
+}
+
+.tooltip-container:hover .tooltip {
+    top: -100%;
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+
+
+
+
 @media (max-width: 767px){
 
     body{
@@ -628,7 +838,7 @@ main .txtBox_ctn .txtBox{
         width: 100%;
         left: 100%;
         background-color: #021024;
-        z-index: 100000000;
+        z-index: 10000;
 
         transition: left 0.3s;
     }
@@ -714,6 +924,23 @@ main .txtBox_ctn .txtBox{
   
     /*/*//****//***/
 
+    .comt_ttl-bx h2{
+        font-size: 120%;
+    }
+
+    .comt_info-bx{
+        margin-top: 20%;
+    }
+
+    .tollsCnt{
+        padding: 15%;
+    }
+
+
+
+
+    /******************************/
+
     main .txtBox_ctn{
         width: 97%;
     }
@@ -750,6 +977,10 @@ main .txtBox_ctn .txtBox{
 
 .backSect{
     left: 0%;
+}
+
+.backSectTw{
+    top: 0%;
 }
 
 
