--- a/SAIgpt/style.css
+++ b/SAIgpt/style.css
@@ -24,7 +24,7 @@ body{
     display: grid;
     max-width: 100vw;
     height: 100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     grid-template-areas: 
     "header header header section"
     "main main main section";
@@ -804,6 +804,156 @@ main .txtBox_ctn .txtBox{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.planVIP-ctn{
+    position: fixed;
+    background-color: #000000bb;
+    backdrop-filter: blur(10px);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 100000000;
+    left: 100%;
+
+    transition: left 0.7s;
+
+    .dctVip{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 51% 61%, 0 100%);
+        background-color: #fff;
+        width: 100.5%;
+        margin-left: -1px;
+        margin-top: -0.5px;
+        border-radius: 30px 30px 0 0;
+        height: 8.5pc;
+        text-align: center;
+        position: relative;
+
+        h3{
+            padding-top: 10%;
+            font-size: 200%;
+            text-transform: uppercase;
+        }
+    }
+}
+
+.planVIP-ctn .InfoVip{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    ul{
+        text-align: justify;
+        padding: 10%;
+        list-style: none;
+        margin-top: -5%;
+        
+        li{
+            margin-bottom: 5%;
+        }
+    }
+}
+
+.planVIP-ctn .InfoVip ul li::before {
+    content: '*';
+    position: absolute;
+    margin-left: -10px;
+    margin-top: 3px;
+}
+
+.planVIP-ctn .boxPlnVIP:nth-child(3) .dctVip span{
+    position: absolute; 
+    left: 14%;
+    top: 25%;
+    color: #a18a03;
+}
+
+
+.planVIP-ctn .boxPlnVIP:nth-child(2) .InfoVip ul li::before {
+    color: #629ed6;
+}
+
+.planVIP-ctn .boxPlnVIP:nth-child(3) .InfoVip ul li::before {
+    color: #550b27;
+}
+
+
+.planVIP-ctn .fa-x {
+    position: absolute;
+    color: #fff;
+    top: 10%;
+    right: 10%;
+    cursor: pointer;
+}
+
+.boxPlnVIP{
+    width: 22%;
+    height: 70%;
+    border-radius: 30px;
+    position: relative;
+}
+
+.boxOneVP {
+    background: linear-gradient(to bottom,#000046,#1CB5E0);
+    background: -webkit-linear-gradient(to bottom, #000046, #1cb5e0);
+}
+
+.boxTwoVP {
+  background: #ff9966; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #ff9966, #ff5e62); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #ff9966, #ff5e62); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.btnVip{
+    padding: 5% 15%;
+    border-radius: 20px;
+    font-weight: bolder;
+    letter-spacing: 0.5px;
+    margin-top: 8px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.planVIP-ctn .boxPlnVIP .ctn-price {
+    position: absolute;
+    bottom: 5%;
+    left: 25%;
+}
+
+.btnVpOn{
+    background-color: #302a2ad3;
+    color: #ffffff57;
+}
+
+.btnVpTw{
+    background-color: #1c6d44;
+    color: #ffffff;
+}
+
+.btnVpTw:hover{
+    background-color: #154d31;
+}
+
+
+
+
+
+
+
 @media (max-width: 767px){
 
     body{
@@ -937,6 +1087,24 @@ main .txtBox_ctn .txtBox{
     }
 
 
+    /********************************/
+    .planVIP-ctn{
+        flex-wrap: wrap;
+    }
+
+    .boxPlnVIP{
+        flex-basis: 300px;
+        height: 55%;
+    }
+
+    .boxPlnVIP:nth-child(2){
+        margin-top: 40%;
+    }
+
+    .boxPlnVIP:nth-child(3){
+        margin-top: 40%;
+    }
+
 
 
     /******************************/
@@ -979,10 +1147,13 @@ main .txtBox_ctn .txtBox{
     left: 0%;
 }
 
+.backSectOth{
+    left: 0%!important;
+}
+
 .backSectTw{
     top: 0%;
 }
-
 
 .blockft{
     display: block;
