--- a/style.css
+++ b/style.css
@@ -189,12 +189,62 @@ header{
 
 
 
+.pageFunt{
+    position: relative;
+    height: 100vh;
+    background-image: linear-gradient(90deg, rgb(62, 25, 113),rgb(72, 105, 206));
+    background-image: linear-gradient(45deg, rgba(130, 89, 219, 0.2),rgba(44, 192, 226, 0.2),rgba(182, 103, 181, 0.2)),linear-gradient(135deg, rgb(39, 20, 149),rgb(65, 82, 185),rgb(91, 144, 220));
+
+    .box{
+        align-items: center;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+
+        h3{
+            font-size: 220%;
+        }
+
+    }
+}
+
+.pageFunt .linkVd{
+    text-decoration: none;
+    background-color: #0000ff;
+    padding: 1.2% 6%;
+    border-radius: 30px;
+    color: #fff;
+}
+
+.pageFunt .linkVd:hover{
+    background-color: #2626ca;
+}
+
+.svgCtn svg{
+    position: absolute;
+    width: 20pc;
+    bottom: 0;
+    right: 3%;
+}
 
 
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+/****************************************************************/
 
 
 
@@ -461,6 +511,41 @@ header{
         /*object-fit: fill;*/
     }
     
+    /************************************************************/
+
+    .pageFunt{
+        .box{
+            h3{
+                font-size: 120%;
+            }
+
+            iframe{
+                width: 16pc;
+                height: 26pc;
+            }
+        }
+    }
+    
+    .pageFunt .linkVd{
+        padding: 2% 6%;
+        border-radius: 30px;
+        font-size: 110%;
+        color: #fff;
+    }
+    
+    .pageFunt .linkVd:hover{
+        background-color: #2626ca;
+    }
+    
+    .svgCtn svg{
+        position: absolute;
+        width: 20pc;
+        bottom: 0;
+        right: 3%;
+    }
+    
+
+
 
 
     /*/***/
