--- a/SAIgpt/profile_page/style.css
+++ b/SAIgpt/profile_page/style.css
@@ -29,10 +29,13 @@ body{
     "main";
     background-image: linear-gradient(67.5deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(135deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(0deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(8, 8, 8),rgb(221, 221, 221)); background-blend-mode:overlay,overlay,overlay,overlay,normal;
     background-image: radial-gradient(circle at 99% 33%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 37%,transparent 37%, transparent 100%),radial-gradient(circle at 46% 16%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 43%,transparent 43%, transparent 100%),radial-gradient(circle at 99% 25%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 22%,transparent 22%, transparent 100%),radial-gradient(circle at 57% 88%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 86%,transparent 86%, transparent 100%),radial-gradient(circle at 82% 78%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 22%,transparent 22%, transparent 100%),linear-gradient(90deg, rgb(6,63,62),rgb(6,63,62));
-    background-repeat: no-repeat;
     background-size: cover;
 }
 
+body::-webkit-scrollbar{
+    background-color: transparent;
+    width: 0;
+}
 
 /**header**/
 
@@ -100,15 +103,15 @@ header nav div  {
     .linkA4:hover::after{
         margin-top: 6%;
         width: 15% !important;
-        height: 6%;
+        height: 4%;
         margin-left: -15%;
     }
 
     .linkA3:hover::after{
         margin-top: 6%;
-        width: 18%;
-        height: 6%;
-        margin-left: -18%;
+        width: 15%;
+        height: 4%;
+        margin-left: -13%;
     }
 }
 
@@ -116,7 +119,7 @@ header nav div  {
 
 .fa-play,
 .fa-bars-staggered,
-.fa-newspaper{
+.fa-map{
     color: #ffecd1;
 }
 
@@ -758,12 +761,6 @@ section:nth-child(2){width: 70%;}
     margin-bottom: 2%;
 }
 
-
-.ntfcCtn {
-    border-radius: 0 0 20px 20px;
-}
-
-
 @media (max-width: 767px){
 
     .first-list{
@@ -792,6 +789,10 @@ section:nth-child(2){width: 70%;}
         i{
             color: #640909;
         }
+    }
+
+    .CrStn {
+        border-radius: 0 0 20px 20px;
     }
 
     .returnArrow{
@@ -880,7 +881,7 @@ section:nth-child(2){width: 70%;}
 
     .porfileBox_ctn{
         overflow-y: hidden;
-        height: 85%;
+        height: 90%;
         margin-top: -10%;
     }
 
@@ -892,7 +893,7 @@ section:nth-child(2){width: 70%;}
     .all-Info-ctn{
         width: 95%!important;
         background-color: #c9c9c9;
-        height: 95%!important;
+        height: 98%!important;
         position: fixed;
         left: -120%;
         border-left: 1px solid #ffffff;
