--- a/SAIgpt/videosPage_SAI/style.css
+++ b/SAIgpt/videosPage_SAI/style.css
@@ -23,14 +23,18 @@ body{
     display: grid;
     max-width: 100vw;
     height: 100vh!important;
+    display: flex;
+    flex-direction: column;
     overflow-x: hidden;
-    grid-template-areas: 
-    "header"
-    "main";
     background-image: linear-gradient(67.5deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(135deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(0deg, rgb(6, 6, 6) 0%, rgb(6, 6, 6) 6%,rgb(29, 29, 29) 6%, rgb(29, 29, 29) 57%,rgb(52, 52, 52) 57%, rgb(52, 52, 52) 58%,rgb(75, 75, 75) 58%, rgb(75, 75, 75) 79%,rgb(97, 97, 97) 79%, rgb(97, 97, 97) 93%,rgb(120, 120, 120) 93%, rgb(120, 120, 120) 95%,rgb(143, 143, 143) 95%, rgb(143, 143, 143) 100%),linear-gradient(90deg, rgb(8, 8, 8),rgb(221, 221, 221)); background-blend-mode:overlay,overlay,overlay,overlay,normal;
     background-image: radial-gradient(circle at 99% 33%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 37%,transparent 37%, transparent 100%),radial-gradient(circle at 46% 16%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 43%,transparent 43%, transparent 100%),radial-gradient(circle at 99% 25%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 22%,transparent 22%, transparent 100%),radial-gradient(circle at 57% 88%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 86%,transparent 86%, transparent 100%),radial-gradient(circle at 82% 78%, rgba(162,209,173, 0.1) 0%, rgba(162,209,173, 0.1) 22%,transparent 22%, transparent 100%),linear-gradient(90deg, rgb(6,63,62),rgb(6,63,62));
+    background-size: cover;
 }
 
+body::-webkit-scrollbar{
+    background-color: transparent;
+    width: 0;
+}
 
 /**header**/
 
@@ -88,24 +92,24 @@ header nav div  {
         content: ' ';
         position: absolute;
         margin-top: 22px;
-        margin-left: -2.5%;
-        width: 2.5%;
+        margin-left: -2%;
+        width: 2%;
         height: 0.5%;
         border-radius: 20px;
         background-color: #56247e;
     }
 
     .linkA4:hover::after{
-        margin-top: 7%;
-        width: 18%;
-        height: 5%;
-        margin-left: -16%;
+        margin-top: 6%;
+        width: 15% !important;
+        height: 6%;
+        margin-left: -15%;
     }
 
     .linkA3:hover::after{
-        margin-top: 7%;
+        margin-top: 6%;
         width: 15%;
-        height: 5%;
+        height: 6%;
         margin-left: -13%;
     }
 }
@@ -150,196 +154,121 @@ header nav .txt_nav .infoTxt .profileTxt{
 
 
 
-
-
-
-
-
-/************************************************/
-
-.sectNews{
-    margin-top: 1%;
+/*main*/
+main{
+    grid-area: main;
     display: flex;
-    text-align: center;
-    font-size: 150%;
     flex-direction: column;
+    text-align: center;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    height: 100%!important;
+    h1{
+        position: absolute;
+        margin: 3%;
+        top: 0;
+        color: #fff;
+    }
 }
 
-.linkToMpSc{
-    margin-top: 2%;
+.videos{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-}
-
-.mapBxLn{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.mapBxLn{
-    align-items: center;
-
-    label{
-        font-weight: bolder;
-    }
-
-    input{
-        cursor: pointer;
-        padding: 4%;
-        width: 50%;
-        border-radius: 30px;
-    }
-
-    small{
-        font-size: 50%;
-        margin-bottom: 10%;
-    }
-}
-
-.mapBxLn input:hover{
-    background-color: #dbd7d7bb;
-}
-
-.mapBxLn input:focus{
-    outline: none;
-}
-
-.mapCt{
-    border-radius: 20px;
-    outline: 2px solid #000;
-}
-
-
-
-
-
-
-
-
-
-
-
-/************************************************************/
-
-button {
-    position: relative;
-    display: inline-block;
-    margin: 15px;
-    padding: 15px 30px;
-    text-align: center;
-    font-size: 18px;
-    letter-spacing: 1px;
-    text-decoration: none;
-    color: #725AC1;
-    background: transparent;
-    cursor: pointer;
-    transition: ease-out 0.5s;
-    border: 2px solid #725AC1;
-    border-radius: 10px;
-    box-shadow: inset 0 0 0 0 #725AC1;
-}
-
-button:hover {
-    color: white;
-    box-shadow: inset 0 -100px 0 0 #725AC1;
-}
-
-button:active {
-    transform: scale(0.9);
-}
-
-
-/******************************************/
-
-.brtsCtn{
-    position: relative;
-}
-
-.emerBls{
-    position: absolute;
-}
-
-.emerBls .blls{
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
-}
-
-.emerBls:nth-child(1){
-    top: 18%;
-    right: 6%;
-
-    .blls{
-        border-radius: 999999999px;
-        background-color: #b8a11ca6;
-    }
-}
-
-.infor{
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 1%;
-    width: 15%;
-    margin-top: -12%;
-    margin-left: -5%;
-    border: 1px solid #000;
-    position: fixed;
-    display: none;
-
-    .perflRpt{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-
-        div{
-            font-size: 19px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
+    width: 100%;
+    div{
+        flex-basis: 200px;
+        iframe{
+            width: 400px;
+            height: 250px;
+            padding: 2%;
         }
     }
-
-    h3{
-        margin-top: 5px;
-        font-size: 15px;
-    }
-
-    p{
-        font-size: 15px;
-    }
 }
 
-.perflRpt div p:nth-child(2){
-    font-size: 12px;
+
+
+
+
+
+
+
+
+
+
+
+/*Olas*/
+
+.wave45{
+    position: absolute;
+    bottom: 0;
+    z-index: -100;
 }
 
-.infor .imgReprt{
-    width: 20%;
-    border-radius: 999999999px;
+.waves-cnt{
+    position: absolute;
+	width: 100%;
+	transform: rotate(360deg);
+    bottom: 0;
+	z-index: -10;
 }
 
-.emerBls:nth-child(2){
-    top: 40%;
-    left: 10%;
-
-    .blls{
-        border-radius: 999999999px;
-        background-color: #a0471eb7;
-    }
+.waves{
+  width: 100%;
+  height: 12vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
 }
 
-.emerBls:nth-child(3){
-    top: 55%;
-    right: 20%;
+/* Animation */
 
-    .blls{
-        border-radius: 999999999px;
-        background-color: #b8a11ca6;
-    }
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
 }
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+}
+@keyframes move-forever {
+  0% {
+   transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -365,7 +294,7 @@ button:active {
             margin-left: 30%;
         }
         height: 10pc;
-        p, a{
+        a{
             color: #000;
         }
         i{
@@ -373,30 +302,8 @@ button:active {
         }
     }
 
-    header nav div  {
-        .linkA1 a:hover::after, 
-        .linkA1 a.active::after,
-        .linkA3 a:hover::after,
-        .linkA4 a:hover::after{
-            margin-left: -8%;
-            width: 8%;
-        }
-    
-        .linkA4 a:hover::after,
-        .linkA4 a.active{
-            margin-top: 11%;
-            width: 36% !important;
-            height: 2%;
-            margin-left: -34%;
-        }
-    
-        .linkA3 a:hover::after,
-        .linkA3 a.active{
-            margin-top: 11%;
-            width: 40% !important;
-            height: 2%;
-            margin-left: -40%;
-        }
+    .CrStn {
+        border-radius: 0 0 20px 20px;
     }
 
     .returnArrow{
@@ -423,6 +330,57 @@ button:active {
         }
     }
 
+    header nav .txt_nav .infoTxt li{
+        list-style: none;
+        display: inline-block;
+        display: flex;
+        padding: 2%;
+        img{
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+        }
+        p, a{
+            align-content: center;
+            margin-left: 3px;
+            letter-spacing: 0.5px;
+        }
+        i{
+            align-content: center;
+            margin: 6px;
+        }
+    }
+    
+    header nav div  {
+        .linkA1:hover::after, 
+        .linkA3:hover::after,
+        .linkA4:hover::after{
+            content: ' ';
+            position: absolute;
+            margin-top: 22px;
+            margin-left: -8%;
+            width: 8.5%;
+            height: 0.5%;
+            border-radius: 20px;
+            background-color: #56247e;
+        }
+    
+        .linkA4:hover::after{
+            margin-top: 12%;
+            width: 35% !important;
+            height: 2%;
+            margin-left: -32%;
+        }
+    
+        .linkA3:hover::after{
+            margin-top: 12%;
+            width: 38%;
+            height: 2%;
+            margin-left: -38%;
+        }
+    }
+    
+
     .prflIfn_cnt,
     .all-Info-ctn{
         border-radius: 20px;
@@ -434,7 +392,7 @@ button:active {
 
     .porfileBox_ctn{
         overflow-y: hidden;
-        height: 85%;
+        height: 90%;
         margin-top: -10%;
     }
 
@@ -446,7 +404,7 @@ button:active {
     .all-Info-ctn{
         width: 95%!important;
         background-color: #c9c9c9;
-        height: 95%!important;
+        height: 98%!important;
         position: fixed;
         left: -120%;
         border-left: 1px solid #ffffff;
@@ -457,71 +415,19 @@ button:active {
 
 
     /***************************************/
-        /*/***/
 
-        .sectNews{
-            margin-top: 4%;
-        }
-    
-        .linkToMpSc{
+
+    .videos{
+        width: 100%;
+        margin-top: 105%;
+        div{
             iframe{
-                width: 80%;
-                margin-top: 12%;
+                width: 300px;
             }
         }
+    }
+    /****************************************************************/
     
-        .mapBxLn{
-            margin-top: 5%;
-            label{
-                font-size: 80%;
-            }
-            small{
-                width: 80%;
-            }
-        }
-    
-    /*/*//****//***/
-
-    .emerBls .blls{
-        width: 40px;
-        height: 40px;
-    }
-
-    .emerBls:nth-child(1){
-        top: 12%;
-        right: 18%;
-    }
-
-    .infor{
-        width: 12pc;
-        margin-top: -37%!important;
-        margin-left: -18%;
-        border: 1px solid #000;
-        position: fixed;
-        display: none;
-
-        .perflRpt{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-
-            div{
-                font-size: 19px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-evenly;
-            }
-        }
-
-        h3{
-            margin-top: 5px;
-            font-size: 15px;
-        }
-
-        p{
-            font-size: 15px;
-        }
-    }
 
 }
 
@@ -536,12 +442,3 @@ button:active {
 .blockft{
     left: 71.8%;
 }
-
-.visible{
-    display: block;
-}
-
-.invisible{
-    display: none;
-}
-
